apps/kube/vector/manifests/vector-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vector
  labels:
    app: vector
    environment: production
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
